Basic routing working and components declared

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The whole content below can be removed with the new code.-->
-<div style="text-align:center">
+<!--<div style="text-align:center">
   <h1>
     Welcome to {{title}}!!
   </h1>
@@ -14,4 +14,5 @@
   </button><br>
   <h2>Logout</h2><br>
   <button (click) = "logout()">Logout of FB</button>
-</div>
+</div>-->
+<router-outlet></router-outlet>
