A component for listing list of products sold by current user

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
 <h1>{{componentName}}</h1>
 <button (click) = "addNewProduct()">Sell a new product</button>
 <home-products></home-products>
+<sold-products></sold-products>
