--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -4,6 +4,7 @@
         <div *ngIf = "ifCreatedByResolved && ifAlreadyBoughtResolved">
             <button *ngIf = "ifCreatedBy" (click) = "editProduct()">Edit</button>
             <button *ngIf = "!ifCreatedBy && !ifAlreadyBought" (click) = "buyProduct()">Buy</button>
+            <button *ngIf = "ifCreatedBy" (click) = "deleteProduct()">Delete</button>
             <button (click) = "goBack()">Go Back</button>
         </div>
         <h3>{{product.title}}</h3><br>
