Facebook logout implemented

--- a/src/app/components/home-products/home-products.component.html
+++ b/src/app/components/home-products/home-products.component.html
@@ -1,4 +1,4 @@
-<h2>Products to buy</h2>
+<h2>Products not sold by you</h2>
 <div *ngIf = "products">
     <product-list [products] = "products"></product-list>
 </div>
