--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <h1>{{componentName}}</h1>
 <button (click) = "addNewProduct()">Sell a new product</button>
+<button (click) = "logout()">Logout</button>
 <home-products></home-products>
 <sold-products></sold-products>
